--- a/TP Integrador/tickets.html
+++ b/TP Integrador/tickets.html
@@ -42,9 +42,11 @@
   </header>
 
   <body>
-    
     <div class="container">
-      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div
+        class="row row-cols-1 row-cols-md-3 mb-3 text-center"
+        style="padding-top: 2em"
+      >
         <div class="col">
           <div class="card border-primary" mb-4>
             <div class="card-body">
@@ -81,13 +83,13 @@
     <div class="container">
       <p class="text-center">VENTA</p>
       <h3 class="text-center">VALOR DE TICKET $200</h3>
-      <form>
+      <form method="get" name="formulario" id="formulario">
         <div class="row" style="padding-top: 2em">
           <div class="col">
             <input
               type="plain-text"
               class="form-control"
-              id="Nombre"
+              id="nombre"
               placeholder="Nombre"
             />
           </div>
@@ -95,7 +97,7 @@
             <input
               type="plain-text"
               class="form-control"
-              id="Apellido"
+              id="apellido"
               placeholder="Apellido"
             />
           </div>
@@ -120,29 +122,46 @@
           </div>
           <div class="col">
             <label for="Categoria" class="form-label">Categoria</label>
-            <select class="form-select" aria-label="Categoria">
+            <select class="form-select" aria-label="Categoria" id="Categoria">
               <option selected value="Estudiante">Estudiante</option>
               <option value="Trainee">Trainee</option>
               <option value="Junior">Junior</option>
             </select>
           </div>
         </div>
-
-        <div class="row" style="padding-top: 2em">
+        <div class="d-grid gap-2 col-12 mx-auto" style="padding-top: 2em">
+          <label
+            id="total"
+            for="Total"
+            class="form-label bg-primary p-4 mb-3 rounded text-primary"
+            style="--bs-bg-opacity: 0.5"
+            >Total a Pagar: $</label
+          >
+        </div>
+        <div class="row">
           <div class="d-grid gap-2 col-6 mx-auto">
-            <button type="submit" class="btn btn-primary btn-success">
+            <button
+              type="button"
+              value="Input"
+              class="btn btn-primary btn-success"
+              id="btnBorrar"
+            >
               Borrar
             </button>
           </div>
           <div class="d-grid gap-2 col-6 mx-auto">
-            <button type="submit" class="btn btn-primary btn-success">
+            <button
+              type="button"
+              value="Input"
+              class="btn btn-primary btn-success"
+              id="btnResumen"
+            >
               Resumen
             </button>
           </div>
         </div>
       </form>
-  
-
+    </div>
     <footer>
       <div class="container">
         <ul class="nav nav-fill">
@@ -171,9 +190,9 @@
           </li>
         </ul>
       </div>
-
-    </div>
     </footer>
+
     <script src="codigo.js"></script>
   </body>
 </html>
+
